@@ -1053,7 +1053,7 @@ void ILAPIENTRY ilSetInteger(ILenum Mode, ILint Param)
 			}
 			break;
 		case IL_DXTC_FORMAT:
-			if (Param >= IL_DXT1 || Param <= IL_DXT5) {
+			if (Param >= IL_DXT1 || Param <= IL_DXT5 || Param == IL_DXT1A) {
 				ilStates[ilCurrentPos].ilDxtcFormat = Param;
 				return;
 			}
